:pencil: global description changed

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Prograpedia
-description: A short description of the site
+description: La enciclopedia de la programación
 logo: /images/logo.png
